update analytics and make 30days token forr biometrics